# f1tenth_convoy

./: .dockerignore  Dockerfile  README.md
convoy_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
convoy_ros/config/: real.yaml  sim.yaml
convoy_ros/config/vesc/params/: vesc_0.yaml
convoy_ros/config/vesc/vesc_tool_files/: vesc6_motor_0.xml
convoy_ros/convoy_ros/: safety.py
convoy_ros/include/convoy_ros/: follower_pp.hpp  gap_follow.hpp  leader_gf.hpp  pure_pursuit.hpp
convoy_ros/install/: local_setup.sh  setup.sh
convoy_ros/install/convoy_ros/include/convoy_ros/: safety.hpp  wall_follow.hpp
convoy_ros/install/convoy_ros/lib/convoy_ros/: gap_follow_node  pure_pursuit  safety_node  wall_follow_node
convoy_ros/install/convoy_ros/share/ament_index/resource_index/package_run_dependencies/: convoy_ros
convoy_ros/install/convoy_ros/share/ament_index/resource_index/parent_prefix_path/: convoy_ros
convoy_ros/install/convoy_ros/share/convoy_ros/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
convoy_ros/install/convoy_ros/share/convoy_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  convoy_rosConfig.cmake
convoy_ros/install/convoy_ros/share/convoy_ros/config/: sim.yaml
convoy_ros/install/convoy_ros/share/convoy_ros/config/teleop/: ps4_ds4_teleop.yaml
convoy_ros/install/convoy_ros/share/convoy_ros/launch/: sim_veh_bringup.launch.py
convoy_ros/launch/: sim_veh_bringup.launch.py  veh_bringup.launch.py
convoy_ros/log/: latest_build
convoy_ros/msg/: LeaderGapFollow.msg
convoy_ros/scripts/: safety_node.py
convoy_ros/src/: follower_pp.cpp  follower_pp_node.cpp  gap_follow.cpp  gap_follow_node.cpp  leader_gf.cpp  leader_gf_node.cpp  pure_pursuit.cpp  pure_pursuit_node.cpp  safety.cpp  safety_node.cpp  wall_follow.cpp  wall_follow_node.cpp
convoy_ros_interfaces/: CMakeLists.txt  package.xml
